# oxygen-sounds

./: .kde-ci.yml  CMakeLists.txt
LICENSES/: BSD-2-Clause.txt
sounds/: Oxygen-Sys-Log-In.ogg.license
sounds/oxygen/: index.theme
sounds/oxygen/stereo/: camera-shutter.wav.license
